# PDF.rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml
core/content/: Cargo.toml  PROVENANCE.md
core/content/src/: color_space.rs  ext_gstate.rs  font_limits.rs  graphics_limits.rs  lib.rs  model.rs  scanner.rs  vm.rs  vm_error.rs  vm_model.rs
core/content/src/vm/: graphics.rs  image.rs
core/content/tests/: repository_policy.rs  scanner.rs  vm.rs  vm_foundation.rs  vm_graphics.rs
core/document/: Cargo.toml  PROVENANCE.md
core/document/src/: access.rs  acquired_services.rs  attestation.rs  catalog.rs  dictionary.rs  error.rs  font_resource.rs  font_resource_limits.rs  form_xobject.rs  image_xobject.rs  index.rs  lib.rs  limits.rs  local_repair_open.rs  model.rs  outline.rs  outline_limits.rs  page_content.rs  page_content_limits.rs  page_ext_gstate_lookup_limits.rs  page_geometry.rs  page_index.rs  page_index_job.rs  page_materialization.rs  page_resources.rs  page_tree.rs  page_tree_limits.rs  page_xobject_lookup_limits.rs  reference_chain.rs  reference_chain_limits.rs  repair.rs  residency.rs  revision_resolver.rs  source_revision_chain.rs  source_xref_stream.rs  strict_base_open.rs  text_string.rs
core/document/tests/: acquired_object.rs  attested_object_access.rs  font_resource.rs  form_xobject.rs  image_xobject.rs  local_repair_geometry.rs  local_repair_open.rs  outline.rs  outline_limit_config.rs  page_content.rs  page_index.rs  page_materialization.rs  page_properties.rs  page_tree_count.rs  reference_chain_limit_config.rs  reference_chain_resolution.rs  repository_policy.rs  revision_attestation.rs  revision_index.rs  revision_resolver.rs  source_revision_chain.rs  source_xref_stream.rs  strict_base_open.rs  text_string.rs
core/fast-raster/: Cargo.toml  PROVENANCE.md
core/fast-raster/src/: lib.rs
core/fast-raster/src/fast/: error.rs  kernels.rs  owned.rs  render.rs  stroke.rs
core/fast-raster/tests/: fast_tiled.rs  m4_canary.rs  repository_policy.rs
core/raster/: Cargo.toml  PROVENANCE.md
core/raster/src/: lib.rs
core/raster/src/fast/: error.rs  kernels.rs  limits.rs  mod.rs  model.rs  owned.rs  render.rs  (+1 more)
core/raster/tests/: fast_tiled.rs  reference_color.rs  reference_foundation.rs  reference_geometry_kernel.rs  reference_glyph.rs  reference_image.rs  reference_integrated_renderer.rs  reference_scene_v2_boundary.rs  repository_policy.rs
platform/browser/worker/: Cargo.toml
platform/desktop/: Cargo.toml  PROVENANCE.md  product-dependency-registry.toml
platform/desktop/macos/: sandbox-target.toml  worker.entitlements
platform/desktop/src/: auth.rs  capability.rs  error.rs  lib.rs  limits.rs  main.rs  native_adapter.rs  process.rs  sandbox.rs  source.rs  supervisor.rs  unix.rs  wire.rs
platform/desktop/tests/: adversarial_child_transport.rs  child_supervisor.rs  child_transport.rs  render_disconnect_proxy.rs  sandbox_contract.rs
platform/electron-bridge/: Cargo.toml  PROTOCOL.md
platform/electron-bridge/src/: lib.rs  main.rs
platform/macos-spawn/: Cargo.toml  PROVENANCE.md
platform/macos-spawn/src/: lib.rs
platform/macos-spawn/tests/: darwin_spawn.rs
runtime/cache/: Cargo.toml  PROVENANCE.md
runtime/cache/src/: binding.rs  error.rs  lib.rs  limits.rs  store.rs  tile.rs
runtime/cache/tests/: ready_store.rs  repository_policy.rs  tile_cache.rs
runtime/engine/: Cargo.toml  PROVENANCE.md
runtime/engine/src/: error.rs  lib.rs  limits.rs  model.rs  registry.rs
runtime/engine/tests/: native_worker.rs  repository_policy.rs
runtime/policy/: Cargo.toml  PROVENANCE.md
runtime/policy/src/: canonical_hash.rs  capability.rs  error.rs  identity.rs  job.rs  lib.rs  limits.rs  protocol_projection.rs  render_config.rs  render_plan.rs
runtime/policy/tests/: capability_policy.rs  pollable_jobs.rs  protocol_projection.rs  render_plan.rs  repository_policy.rs
runtime/session/: Cargo.toml  PROVENANCE.md
runtime/session/src/: error.rs  lib.rs  m1_session.rs  owner.rs  range_coalescer.rs  range_resume.rs  range_resume_error.rs  strict_base_open_coordinator.rs  strict_base_open_owner.rs
runtime/session/tests/: m1_strict_document_session.rs  range_coalescer.rs  range_loopback_http.rs  range_resume.rs  ready_owner.rs  repository_policy.rs  strict_base_open_coordinator.rs  strict_base_open_owner.rs
runtime/tile-cache/: Cargo.toml  PROVENANCE.md
runtime/tile-cache/src/: lib.rs  tile.rs
runtime/tile-cache/tests/: repository_policy.rs  tile_cache.rs
runtime/viewer/: Cargo.toml  PROVENANCE.md
runtime/viewer/src/: lib.rs
runtime/viewer/tests/: error_classification.rs  m4_canary_benchmark.rs  native_preview.rs
tools/baseline/: Cargo.toml  PROVENANCE.md
tools/baseline/pdfium/: README.md  adapter.toml  outline_adapter.toml  page_count_adapter.toml
tools/baseline/src/: lib.rs  pdfium.rs  pdfium_page_count.rs  process.rs
tools/baseline/tests/: pdfium_adapter_contract.rs  pdfium_outline_real_adapter.rs  pdfium_page_count_performance.rs  pdfium_page_count_real_adapter.rs  pdfium_real_adapter.rs  process_harness.rs  repository_pdfium_outline_probe.rs  repository_pdfium_page_count_performance_probe.rs  repository_pdfium_page_count_probe.rs  repository_pdfium_probe.rs  repository_readiness.rs
tools/quality/: Cargo.toml  PROVENANCE.md
tools/quality/fuzz/: Cargo.toml
tools/quality/src/: bundle.rs  case_contract.rs  lib.rs  macos_package.rs  main.rs  manifest.rs  maturity.rs  purity.rs
tools/quality/tests/: m0_exit.rs  m1_document_service_differential.rs  m1_document_service_fuzz.rs  m1_document_service_maturity.rs  m2_exit.rs  m2_scene_gate.rs  m3_basic_image_trace.rs  m3_basic_text_trace.rs  m3_content_graphics_trace.rs  m3_exit.rs  m3_raster_oracle_contract.rs  m3_reference_color_trace.rs  m3_reference_gate.rs  m3_reference_geometry_trace.rs  m3_reference_oracle_model.rs  m3_reference_raster_trace.rs  m4_exit.rs  m4_fast_canary_gate.rs  m4_fast_canary_holdout.rs  m4_fast_raster_fuzz.rs  m4_review_request.rs  native_object_loop.rs  native_range_resume_loop.rs  native_strict_open_runtime_loop.rs  parser_mutation_smoke.rs
(+631 files in other folders)
