[workspace]
resolver = "3"
members = [
    "core/*",
    "platform/desktop",
    "platform/browser/worker",
    "runtime/cache",
    "runtime/engine",
    "runtime/policy",
    "runtime/protocol",
    "runtime/scheduler",
    "runtime/session",
    "runtime/surface",
    "tools/*",
]

[workspace.package]
edition = "2024"
rust-version = "1.93"
version = "0.1.0"
