[workspace]
resolver = "3"
members = [
    "pdf-rs/*",
    "skia",
    "skia/error",
    "skia/geometry",
    "skia/path",
    "skia/core",
    "skia/image",
    "skia/text",
    "skia/cpu",
    "skia/tessellation",
    "skia/gpu",
    "skia/gpu/metal",
    "platform/macos-spawn",
    "platform/desktop",
    "platform/browser/worker",
    "runtime/cache",
    "runtime/engine",
    "runtime/policy",
    "runtime/protocol",
    "runtime/scheduler",
    "runtime/session",
    "runtime/surface",
    "runtime/tile-cache",
    "runtime/viewer",
    "platform/electron-bridge",
    "tools/*",
]

[workspace.package]
edition = "2024"
rust-version = "1.93"
version = "0.1.0"
