[package]
name = "pdf-rs-document"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-bytes = { path = "../bytes" }
pdf-rs-filters = { path = "../filters" }
pdf-rs-syntax = { path = "../syntax" }
pdf-rs-xref = { path = "../xref" }
pdf-rs-object = { path = "../object" }
