[package]
name = "pdf-rs-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
transport-fixture = []

[[bin]]
name = "pdf-rs-desktop-worker"
path = "src/main.rs"
test = false
bench = false
doc = false

[[test]]
name = "adversarial_child_transport"
path = "tests/adversarial_child_transport.rs"
harness = false
required-features = ["transport-fixture"]

[[test]]
name = "child_supervisor"
path = "tests/child_supervisor.rs"
required-features = ["transport-fixture"]

[[test]]
name = "child_transport"
path = "tests/child_transport.rs"
required-features = ["transport-fixture"]

[[test]]
name = "render_disconnect_proxy"
path = "tests/render_disconnect_proxy.rs"
harness = false
required-features = ["transport-fixture"]

[dependencies]
pdf-rs-bytes = { path = "../../core/bytes" }
pdf-rs-engine = { path = "../../runtime/engine" }
pdf-rs-policy = { path = "../../runtime/policy" }
pdf-rs-protocol = { path = "../../runtime/protocol" }
pdf-rs-raster = { path = "../../core/raster" }
pdf-rs-scene = { path = "../../core/scene" }
pdf-rs-surface = { path = "../../runtime/surface" }
pdf-rs-syntax = { path = "../../core/syntax" }
# Narrow Unix/macOS system boundary for socketpair, SCM_RIGHTS,
# read-only shared-memory descriptors, and owned-FD cleanup. No raw libc calls.
rustix = { version = "1.1.4", default-features = false, features = ["std", "fs", "net", "process", "shm"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Narrow repository-owned Darwin posix_spawn boundary. The desktop crate keeps
# forbid(unsafe_code); this dependency provides FD hygiene, not App Sandbox.
pdf-rs-macos-spawn = { path = "../macos-spawn" }
