[package]
name = "pdf-rs-macos-spawn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[test]]
name = "darwin_spawn"
path = "tests/darwin_spawn.rs"
harness = false

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.186"
rustix = { version = "1.1.4", default-features = false, features = ["fs", "process", "std"] }
