[package]
name = "pdf-rs-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-bytes = { path = "../../pdf-rs/bytes" }
pdf-rs-document = { path = "../../pdf-rs/document" }
pdf-rs-object = { path = "../../pdf-rs/object" }
pdf-rs-syntax = { path = "../../pdf-rs/syntax" }

[dev-dependencies]
pdf-rs-xref = { path = "../../pdf-rs/xref" }
