[package]
name = "pdf-rs-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-bytes = { path = "../../pdf-rs/bytes" }
pdf-rs-fast-raster = { path = "../../pdf-rs/fast-raster" }
pdf-rs-policy = { path = "../policy" }
pdf-rs-protocol = { path = "../protocol" }
pdf-rs-scene = { path = "../../pdf-rs/scene" }
pdf-rs-scheduler = { path = "../scheduler" }
pdf-rs-surface = { path = "../surface" }
pdf-rs-tile-cache = { path = "../tile-cache" }

[dev-dependencies]
pdf-rs-syntax = { path = "../../pdf-rs/syntax" }
