[package]
name = "pdf-rs-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-bytes = { path = "../../pdf-rs/bytes" }
pdf-rs-protocol = { path = "../protocol" }
pdf-rs-scene = { path = "../../pdf-rs/scene" }

[dev-dependencies]
pdf-rs-syntax = { path = "../../pdf-rs/syntax" }
