[package]
name = "pdf-rs-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-bytes = { path = "../../pdf-rs/bytes" }
pdf-rs-cache = { path = "../cache" }
pdf-rs-document = { path = "../../pdf-rs/document" }

[dev-dependencies]
pdf-rs-object = { path = "../../pdf-rs/object" }
pdf-rs-syntax = { path = "../../pdf-rs/syntax" }
pdf-rs-xref = { path = "../../pdf-rs/xref" }
