[package]
name = "pdf-rs-tile-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-bytes = { path = "../../pdf-rs/bytes" }
pdf-rs-policy = { path = "../policy" }

[dev-dependencies]
pdf-rs-scene = { path = "../../pdf-rs/scene" }
pdf-rs-syntax = { path = "../../pdf-rs/syntax" }
