[package]
name = "pdf-rs-baseline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-digest = { path = "../digest" }

[dev-dependencies]
pdf-rs-compare = { path = "../compare" }
pdf-rs-generate = { path = "../generate" }

[[bin]]
name = "pdf-rs-baseline-fixture"
path = "src/bin/baseline_fixture.rs"
test = false
bench = false
doc = false
