[package]
name = "pdf-rs-baseline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-digest = { path = "../digest" }

[dev-dependencies]
pdf-rs-bytes = { path = "../../core/bytes" }
pdf-rs-compare = { path = "../compare" }
pdf-rs-document = { path = "../../core/document" }
pdf-rs-generate = { path = "../generate" }
pdf-rs-object = { path = "../../core/object" }
pdf-rs-syntax = { path = "../../core/syntax" }
pdf-rs-xref = { path = "../../core/xref" }

[[bin]]
name = "pdf-rs-baseline-fixture"
path = "src/bin/baseline_fixture.rs"
test = false
bench = false
doc = false
