[package]
name = "pdf-rs-baseline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-digest = { path = "../digest" }

[dev-dependencies]
pdf-rs-bytes = { path = "../../pdf-rs/bytes" }
pdf-rs-compare = { path = "../compare" }
pdf-rs-document = { path = "../../pdf-rs/document" }
pdf-rs-generate = { path = "../generate" }
pdf-rs-object = { path = "../../pdf-rs/object" }
pdf-rs-syntax = { path = "../../pdf-rs/syntax" }
pdf-rs-xref = { path = "../../pdf-rs/xref" }

[[bin]]
name = "pdf-rs-baseline-fixture"
path = "src/bin/baseline_fixture.rs"
test = false
bench = false
doc = false
