[package]
name = "pdf-rs-quality"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-compare = { path = "../compare" }
pdf-rs-digest = { path = "../digest" }
pdf-rs-generate = { path = "../generate" }

[dev-dependencies]
pdf-rs-benchmark = { path = "../benchmark" }
pdf-rs-bytes = { path = "../../core/bytes" }
pdf-rs-cache = { path = "../../runtime/cache" }
pdf-rs-corpus = { path = "../corpus" }
pdf-rs-document = { path = "../../core/document" }
pdf-rs-object = { path = "../../core/object" }
pdf-rs-syntax = { path = "../../core/syntax" }
pdf-rs-xref = { path = "../../core/xref" }
