[package]
name = "pdf-rs-quality"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-compare = { path = "../compare" }
pdf-rs-digest = { path = "../digest" }
pdf-rs-generate = { path = "../generate" }

[dev-dependencies]
pdf-rs-benchmark = { path = "../benchmark" }
pdf-rs-bytes = { path = "../../core/bytes" }
pdf-rs-cache = { path = "../../runtime/cache" }
pdf-rs-content = { path = "../../core/content" }
pdf-rs-corpus = { path = "../corpus" }
pdf-rs-document = { path = "../../core/document" }
pdf-rs-filters = { path = "../../core/filters" }
pdf-rs-font = { path = "../../core/font" }
pdf-rs-object = { path = "../../core/object" }
pdf-rs-raster = { path = "../../core/raster" }
pdf-rs-scene = { path = "../../core/scene" }
pdf-rs-session = { path = "../../runtime/session" }
pdf-rs-syntax = { path = "../../core/syntax" }
pdf-rs-xref = { path = "../../core/xref" }
