[package]
name = "pdf-rs-quality"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-compare = { path = "../compare" }
pdf-rs-digest = { path = "../digest" }
pdf-rs-generate = { path = "../generate" }

[dev-dependencies]
pdf-rs-benchmark = { path = "../benchmark" }
pdf-rs-bytes = { path = "../../pdf-rs/bytes" }
pdf-rs-cache = { path = "../../runtime/cache" }
pdf-rs-content = { path = "../../pdf-rs/content" }
pdf-rs-corpus = { path = "../corpus" }
pdf-rs-document = { path = "../../pdf-rs/document" }
pdf-rs-fast-raster = { path = "../../pdf-rs/fast-raster" }
pdf-rs-filters = { path = "../../pdf-rs/filters" }
pdf-rs-font = { path = "../../pdf-rs/font" }
pdf-rs-object = { path = "../../pdf-rs/object" }
pdf-rs-policy = { path = "../../runtime/policy" }
pdf-rs-raster = { path = "../../pdf-rs/raster" }
pdf-rs-scene = { path = "../../pdf-rs/scene" }
pdf-rs-session = { path = "../../runtime/session" }
pdf-rs-syntax = { path = "../../pdf-rs/syntax" }
pdf-rs-xref = { path = "../../pdf-rs/xref" }

[[test]]
name = "pdfrs_strict_open_v1"
path = "../../tests/pdfrs/strict-open-v1/strict_open.rs"
