[package]
name = "pdf-rs-browser-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[[bin]]
name = "pdf-rs-browser-worker"
path = "src/main.rs"
test = false
bench = false
doc = false

[dependencies]
pdf-rs-bytes = { path = "../../../core/bytes" }
pdf-rs-engine = { path = "../../../runtime/engine" }
pdf-rs-policy = { path = "../../../runtime/policy" }
pdf-rs-protocol = { path = "../../../runtime/protocol" }
pdf-rs-raster = { path = "../../../core/raster" }
pdf-rs-scene = { path = "../../../core/scene" }
pdf-rs-surface = { path = "../../../runtime/surface" }
pdf-rs-syntax = { path = "../../../core/syntax" }
