[package]
name = "pdf-rs-browser-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[[bin]]
name = "pdf-rs-browser-worker"
path = "src/main.rs"
test = false
bench = false
doc = false

[dependencies]
pdf-rs-bytes = { path = "../../../pdf-rs/bytes" }
pdf-rs-engine = { path = "../../../runtime/engine" }
pdf-rs-fast-raster = { path = "../../../pdf-rs/fast-raster" }
pdf-rs-policy = { path = "../../../runtime/policy" }
pdf-rs-protocol = { path = "../../../runtime/protocol" }
pdf-rs-scene = { path = "../../../pdf-rs/scene" }
pdf-rs-surface = { path = "../../../runtime/surface" }
pdf-rs-syntax = { path = "../../../pdf-rs/syntax" }
