[package]
name = "pdf-rs-quality-fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"
pdf-rs-bytes = { path = "../../../pdf-rs/bytes" }
pdf-rs-cache = { path = "../../../runtime/cache" }
pdf-rs-document = { path = "../../../pdf-rs/document" }
pdf-rs-fast-raster = { path = "../../../pdf-rs/fast-raster" }
pdf-rs-object = { path = "../../../pdf-rs/object" }
pdf-rs-policy = { path = "../../../runtime/policy" }
pdf-rs-raster = { path = "../../../pdf-rs/raster" }
pdf-rs-scene = { path = "../../../pdf-rs/scene" }
pdf-rs-session = { path = "../../../runtime/session" }
pdf-rs-syntax = { path = "../../../pdf-rs/syntax" }
pdf-rs-xref = { path = "../../../pdf-rs/xref" }

[[bin]]
name = "m1documentservices"
path = "fuzz_targets/m1_document_services.rs"
test = false
doc = false
bench = false

[[bin]]
name = "m4fastraster"
path = "fuzz_targets/m4_fast_raster.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
